# human_activity_anticipation

./: CMakeLists.txt  LICENSE.txt  README.md  affmap.txt  classmap.txt  classmap_filtered.txt  install_dependencies.sh  pyglpk_setup.py
data/: Segmentation.txt  Segmentation_ijrr.txt  labeling_all_sampled.txt  labeling_ijrr_sampled.txt
fold3/: model.txt
fold4/: model.txt
pygraphcut-0.1/: Makefile  README.txt  mytest.py  out  setup.py  test.py  valgrind-python.supp
pygraphcut-0.1/html/: building.html  download.html  examples.html  graphcut_code.html  index.html  license.html  readme.html  style.css
pygraphcut-0.1/src/: energyobj.cpp  energyobj.h  graphobj.cpp  graphobj.h  interface.cpp  qpboobj.cpp  qpboobj.h  util.h
pygraphcut-0.1/src/outside/: QPBO.cpp  QPBO_extra.cpp  energy.cpp  energy.h  energy_old.h  try.cpp
pygraphcut-0.1/src/outside/.svn/: all-wcprops  entries
pygraphcut-0.1/src/outside/.svn/text-base/: QPBO_maxflow.cpp.svn-base  QPBO_postprocessing.cpp.svn-base  graph.cpp.svn-base  graph.h.svn-base  maxflow.cpp.svn-base
src/: affordanceMaps.cpp  affordanceMaps.h  constants.h  featureGenerationForFramesSampled.cpp  featuresRGBD_skel.cpp  features_mod.cpp  frame.cpp  frame.h  frameFeatures.cpp  frameFeatures_old.cpp  frame_skel.h  pointcloudClustering.h  readData.cpp  sampleGeneration.h  streamingPrediction.cpp  streamingPrediction_segmented.cpp  svm_struct_api.c  svm_struct_api.h  svm_struct_api_types.h  trajectory_shapes.h
src/includes/: CombineUtils.h  CovarianceMatrix.h  bezier.h
src/includes/.svn/: all-wcprops  entries
src/includes/.svn/text-base/: color.cpp.svn-base  point_types.h.svn-base
src/pyobjs/: Makefile  array.c  array.h  constraints.c  constraints.h  default.c  default.h  document.c  document.h  kernelparm.c  kernelparm.h  model.c  model.h  pyobjs.h  sample.c  sample.h  setup.py  sparm.c  sparm.h  sparse.c  sparse.h  structmodel.c  structmodel.h  svmapi.c  svmapi.h  svmapi_globals.h
src/svm_light/: Makefile  svm_classify.c  svm_common.c  svm_common.h  svm_learn.c  svm_learn_main.c
src/svm_struct/: Makefile  svm_struct_classify.c  svm_struct_classify_stream.c  svm_struct_classify_stream.h  svm_struct_common.h  svm_struct_learn.c  svm_struct_learn.h  svm_struct_main.c
